tests/init/neg/promotion-loop.check
-- Error: tests/init/neg/promotion-loop.scala:16:10 --------------------------------------------------------------------
16 |  println(b)      // error
   |          ^
   |       Cannot prove that the value is fully-initialized. May only use initialized value as arguments.
   |
   |       The unsafe promotion may cause the following problem:
   |       Promote the value under initialization to fully-initialized. May only use initialized value as arguments.
